tests/e2e/indentation_error2.error
Error: syntax error in story at line 3, column 5

3|          h = hashes digest method: "sha1" data: "foo"
           ^

E0132: Tabs are not allowed.
